--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.5"
+    "mongoose": "^5.8.5",
+    "validator": "^12.1.0"
   }
 }
